--- a/scss/_map.scss
+++ b/scss/_map.scss
@@ -2,6 +2,10 @@
   paint-order: stroke;
 }
 
+.pick-coordinates {
+  cursor: crosshair;
+}
+
 .map {
   width: 100%;
   height: 100%;
@@ -12,6 +16,10 @@
 
   button.add-layer:after {
     content: '\f217';
+  }
+
+  button.show-coords:after {
+    content: '\f2a6';
   }
 
  .node-alert {
