--- a/scss/_filters.scss
+++ b/scss/_filters.scss
@@ -18,10 +18,10 @@
 
     label {
       cursor: pointer;
+    }
 
-      strong {
-        color: rgba(255, 255, 255, 1);
-      }
+    strong {
+      color: rgba(255, 255, 255, 1);
     }
 
     &.not {
@@ -35,7 +35,7 @@
       width: 18pt;
       height: 18pt;
       background: rgba(255, 255, 255, 0.0);
-      font-size: 12pt;
+      font-size: 1.41em;
       vertical-align: middle;
       color: rgba(255, 255, 255, 0.8);
 
@@ -49,5 +49,24 @@
         box-shadow: none;
       }
     }
+  }
+
+  input {
+    background: transparent;
+    border-bottom: 2pt solid rgba(255, 255, 255, 0.5);
+    padding: 2pt 0;
+    outline: 0;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1em;
+    border: none;
+
+    &:focus {
+      background: rgba(255, 255, 255, 0.15);
+    }
+  }
+
+  strong.input {
+    cursor: text;
   }
 }
